# rust-training

./: .env  Cargo.toml  README.md  index.html
migrations/2024-01-05-014226_create_tweets/: up.sql
src/: lib.rs  likes.rs  main.rs  tweets.rs
src/basic/: array.rs  ciclos.rs  code_blocks.rs  conditionals.rs  functions.rs  matchs.rs  mod.rs  tuplas.rs  variables.rs  vectors.rs
webapp/: index.html
