[package]
name = "rust-training"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
chrono = { version = "0.4.31", features = ['serde'] }
diesel = { version = "2.1.0", features = [
    'postgres',
    'r2d2',
    'uuid',
    'chrono',
] }
dotenv = "0.15.0"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
